<resources>
    <string name="about_author">Utvecklad av och © Wilhelm Svenselius\nE-post: wilhelm.svenselius@accidis.se</string>
    <string name="about_disclaimer">Denna applikation är inte utvecklad, utgiven, godkänd av eller på annat sätt anknuten till Försvarsmakten.</string>
    <string name="about_instruction_heading">Kort instruktion</string>
    <string name="about_instruction_para1">Välj materiel från listan Materiel och tryck Lasta för att lägga till det på din godsdeklaration. Observera att du för ammunition och vissa andra typer av materiel skall ange både vikt och antal. Vikt avser vikten på hela kollit, alltså inklusive förpackningens vikt. Det antalet som avgör mängden farligt gods, appen beräknar automatiskt NEM (nettoexplosivmängd). För övriga typer av materiel som bränsle, andra vätskor eller gaser anges endast vikt eller volym.</string>
    <string name="about_instruction_para2">Du kan endast redigera en godsdeklaration åt gången. När du är färdig med den, tryck Spara. Sparade godsdeklarationer finner du i listan med samma namn. Kommandon finns antingen på knappar i sidans nederkant eller i menyn i övre högra hörnet.</string>
    <string name="about_instruction_para3">Vänligen rapportera ev. brister och saknad funktionalitet till utvecklaren.</string>
	<string name="about_license_heading">Licensiering</string>
	<string name="about_license_para1">FM FG Godsdeklaration är öppen källkod och distribueras i enlighet med Apache License version 2.0. Källkoden finns på GitHub.</string>
    <string name="about_nav_title">Om appen</string>
    <string name="about_para1">Det här är en mobilapp för digital godsdeklaration av farligt gods-transporter riktad till personal inom Försvarsmakten. Syftet är att enkelt kunna framställa godsdeklarationer som uppfyller kraven i SäkI Tp FG vid transport av materiel och utrustning, exempelvis ammunition och drivmedel.</string>
    <string name="about_para2">Appen saknar dock anknytning till Försvarsmakten; den är utvecklad på privat initiativ. Innehållets korrekthet garanteras inte. Användning sker på eget ansvar. Appen innehåller ingen sekretessbelagd information.</string>
    <string name="about_version">Version %1$s</string>
	<string name="about_website">För mer information om appen och ytterligare instruktioner för dess användning, gå till godsdeklaration.se.</string>
    <string name="app_name">FM FG Godsdeklaration</string>
    <string name="address_recipient_heading">Skriv mottagarens namn och adress:</string>
    <string name="address_sender_heading">Skriv avsändarens namn och adress:</string>
	<string name="address_author_heading">Skriv ditt namn, befattning och kontaktuppgifter:</string>
    <string name="coloading_nav_title">Samlastning klass 1</string>
	<string name="document_add_custom_row">Lägg till fritextrad</string>
	<string name="document_amount_format">(%1$s st)</string>
	<string name="document_author">Upprättad av</string>
    <string name="document_clear">Rensa</string>
    <string name="document_clear_everything">Rensa allt</string>
    <string name="document_clear_heading">Vill du ta bort innehållet i den här godsdeklarationen? Detta går inte att ångra.</string>
    <string name="document_clear_keep_addresses">Behåll adresser</string>
	<string name="document_custom_row_labels">Etiketter</string>
	<string name="document_custom_row_text">Fritext</string>
    <string name="document_delete">Ta bort</string>
    <string name="document_delete_heading">Vill du ta bort den här godsdeklarationen? Detta går inte att ångra.</string>
    <string name="document_edit">Redigera</string>
	<string name="document_edit_opt_fields">Ytterligare info</string>
    <string name="document_edit_unsaved_heading">Du har gjort ändringar i den nuvarande godsdeklarationen som inte är sparade. Om du börjar redigera den här godsdeklarationen så förlorar du de osparade ändringarna. Vill du fortsätta?</string>
    <string name="document_edit_unsaved_no">Nej, avbryt</string>
    <string name="document_edit_unsaved_yes">Ja, börja redigera</string>
    <string name="document_editing">(redigerar)</string>
	<string name="document_empty">Godsdeklarationen är tom.</string>
    <string name="document_nav_title">Godsdeklaration</string>
    <string name="document_nem_format">NEM: %1$s kg</string>
    <string name="document_no_data">Uppgift saknas.</string>
    <string name="document_no_name">Namnlös</string>
	<string name="document_protected_transport">Skyddad transport</string>
    <string name="document_recipient">Mottagare</string>
    <string name="document_save_as_new">Spara som ny</string>
    <string name="document_save_heading">Ge godsdeklarationen ett beskrivande namn så att du hittar den senare:</string>
    <string name="document_save_already_saved">Den här godsdeklarationen är redan sparad. Om du sparar den nu så skriver du över den tidigare sparade versionen. Välj "Spara som ny" för att inte skriva över den tidigare.</string>
    <string name="document_sender">Avsändare</string>
    <string name="document_summary_total_format">Totalt värde %1$s p.</string>
    <string name="document_summary_total_nem_format">Total NEM: %1$s kg.</string>
    <string name="document_summary_tpkat_format">Transportkategori %1$d: %2$s, värde %3$s p.</string>
    <string name="document_tap_to_edit_address">Tryck här för att ange namn och adress.</string>
	<string name="document_tap_to_edit_author">Tryck här för att ange dina uppgifter.</string>
    <string name="document_unspecified_package">kolli</string>
    <string name="document_unspecified_packages">kollin</string>
	<string name="document_vehicle_reg">Fordonets reg.nr</string>
	<string name="document_vehicle_type">Fordonstyp</string>
    <string name="document_warning_class1_line1">Varning! Godsdeklarationen innehåller ämnen som inte får samlastas (ämnen märkta med etikett 1, 1.4, 1.5 och 1.6 får som regel inte lastas på samma fordon som kollin som innehåller farligt gods från övriga klasser, undantaget etikett 1.4S). Beakta även klass 1-ämnenas samlastningsgrupper.</string>
    <string name="document_warning_class1_line2">Tänk på att om du lastar farligt gods på ett separat fordon så måste du upprätta en separat godsdeklaration för det fordonet.</string>
	<string name="document_export_page_format">%1$d av %2$d</string>
	<string name="document_export_vanity_format">Utskriven från %1$s v%2$s</string>
	<string name="document_export">Exportera PDF</string>
	<string name="document_export_chooser_title">Exportera PDF till…</string>
	<string name="document_export_default_name">Godsdeklaration</string>
	<string name="document_export_error">Ett oväntat fel uppstod när deklarationen skulle exporteras. Din enhet kan ha slut på utrymme. Vänligen kontakta utvecklaren om felet kvarstår.</string>
	<string name="document_export_labels">Etiketter</string>
	<string name="document_export_material_header">Transportmärkning</string>
	<string name="document_export_pkgs_header">Kollin</string>
	<string name="document_export_signature_date">Ort och datum</string>
	<string name="document_export_signature_driver">Förarens namn och underskrift</string>
	<string name="document_export_signature_sender">Avsändarens namn och underskrift</string>
	<string name="document_export_weight_volume_header">Vikt/volym</string>
	<string name="document_export_please_wait">Det här tar några sekunder…</string>
	<string name="document_opt_field_protected_transport">Skyddad tp:</string>
	<string name="document_opt_field_vehicle_type">Fordonstyp:</string>
	<string name="document_opt_field_vehicle_reg">Fordonets reg.nr:</string>
	<string name="documents_list_nav_title">Godsdekl.</string>
    <string name="documents_list_empty">Inga sparade godsdeklarationer.</string>
	<string name="generic_add">Lägg till</string>
    <string name="generic_cancel">Avbryt</string>
	<string name="generic_close">Stäng</string>
	<string name="generic_no">Nej</string>
    <string name="generic_save">Spara</string>
	<string name="generic_yes">Ja</string>
    <string name="generic_unexpected_error">Ett oväntat fel har uppstått. Vänligen kontakta utvecklaren.</string>
    <string name="instructions_nav_title">Instruktioner</string>
    <string name="material_change">Ändra</string>
    <string name="material_favorite_add">Lägg till favorit</string>
    <string name="material_favorite_remove">Ta bort favorit</string>
    <string name="material_fben">Förrådsbenämning</string>
	<string name="material_fbet">M-nummer</string>
	<string name="material_frpgrp">Förpackningsgrupp</string>
    <string name="material_frpgrp_short">Förp.grupp</string>
    <string name="material_klasskod">Klassificeringskod</string>
	<string name="material_klasskod_add">Lägg till</string>
	<string name="material_klasskod_select">Välj etiketter</string>
    <string name="material_load">Lägg till i godsdeklaration</string>
	<string name="material_edit_material">Redigera materiel</string>
	<string name="material_load_nem_calculation">Beräkning av NEM</string>
	<string name="material_material">Lasta materiel</string>
	<string name="material_miljofarligt">Miljöfarligt</string>
    <string name="material_namn">Transportbenämning</string>
    <string name="material_nem">Netto expl.mängd</string>
	<string name="material_nem_per_piece">Netto expl.mängd per styck</string>
	<string name="material_nem_unit">Enhet</string>
    <string name="material_no_data">-</string>
    <string name="material_remove">Ta bort</string>
    <string name="material_tunnelkod">Tunnelrest.kod</string>
    <string name="material_tpkat">Transportkat.</string>
	<string name="material_tpkat_short">Tp.kat</string>
    <string name="material_unnr">UN-nummer</string>
    <string name="material_un_format">UN %1$s</string>
    <string name="material_load_amount">Mängd (styck)</string>
	<string name="material_load_nem_total">Total NEM: %1$s %2$s</string>
	<string name="material_load_nem_warning">NEM per styck för materielen måste anges för att total NEM ska kunna beräknas.</string>
    <string name="material_load_multiplier">Mult.faktor:</string>
    <string name="material_load_nem">NEM:</string>
    <string name="material_load_num_pkgs">Antal kollin</string>
    <string name="material_load_total_value">Totalt dekl. värde:</string>
    <string name="material_load_type_pkgs">Typ av kollin</string>
    <string name="material_load_value">Värde:</string>
	<string name="material_load_value_basis">Antal kg/liter:</string>
    <string name="material_load_weight_volume">Vikt/volym</string>
	<string name="material_load_weight_volume_unit">Enhet</string>
    <string name="materials_list_empty">Inget funnet.</string>
    <string name="materials_nav_title">Materiel</string>
    <string name="materials_search_hint">Skriv här för att filtrera</string>
    <string name="navigation_drawer_open">Öppna navigation</string>
    <string name="navigation_drawer_close">Stäng navigation</string>
	<string name="preferences_nav_title">Inställningar</string>
	<string name="preferences_show_fbet">Visa M-nummer</string>
	<string name="preferences_show_fbet_description">Visa M-nummer i förrådsbenämning</string>
	<string name="preferences_show_author">Visa författare</string>
	<string name="preferences_show_author_description">Visa uppgifter om den som upprättat godsdeklarationen</string>
	<string name="preferences_default_author">Standardförfattare</string>
	<string name="preferences_default_author_description">Ange dina uppgifter så fylls de i automatiskt</string>
	<string name="unit_amount">styck</string>
	<string name="unit_g">g</string>
	<string name="unit_kg">kg</string>
	<string name="unit_liter">liter</string>
    <string name="unit_kg_format">%1$s kg</string>
    <string name="unit_liter_format">%1$s liter</string>
	<string name="unit_none">-</string>
    <string name="unit_points_format">%1$s p</string>
</resources>