<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkgreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_para1"/>

        <TextView
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_para2"/>

        <TextView
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_disclaimer"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_author"
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_author"/>

        <TextView
            android:id="@+id/about_version"
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"/>

        <TextView
            style="@style/AboutHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_instruction_heading"/>

        <TextView
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_instruction_para1"/>

        <TextView
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_instruction_para2"/>

        <TextView
            style="@style/AboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_instruction_para3"/>
    </LinearLayout>
</ScrollView>