<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/dialog_vertical_margin"
		android:paddingLeft="@dimen/dialog_horizontal_margin"
		android:paddingRight="@dimen/dialog_horizontal_margin"
		android:paddingTop="@dimen/dialog_vertical_margin">

		<TextView
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_row="0"
			android:text="@string/material_load_num_pkgs"/>

		<EditText
			android:id="@+id/material_load_number_pkgs"
			android:layout_width="60dp"
			android:layout_column="1"
			android:layout_row="0"
			android:inputType="number"
			android:maxLength="5"/>

		<TextView
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_row="1"
			android:text="@string/material_load_type_pkgs"/>

		<AutoCompleteTextView
			android:id="@+id/material_load_type_pkgs"
			android:layout_width="100dp"
			android:layout_column="1"
			android:layout_row="1"
			android:inputType="text"/>

		<TextView
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_row="2"
			android:text="@string/material_load_weight_volume"/>

		<LinearLayout
			android:layout_column="1"
			android:layout_row="2"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/material_load_weight_volume"
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:inputType="numberDecimal"
				android:maxLength="7"/>

			<Spinner
				android:id="@+id/material_load_weight_volume_unit"
				android:layout_width="120dp"
				android:layout_height="match_parent"/>
		</LinearLayout>

		<TextView
			android:id="@+id/material_load_amount_heading"
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_row="3"
			android:text="@string/material_load_amount"/>

		<LinearLayout
			android:id="@+id/material_load_amount_layout"
			android:layout_column="1"
			android:layout_row="3"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/material_load_amount"
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:inputType="numberDecimal"
				android:maxLength="7"/>

			<TextView
				style="@style/MaterialLoadDialogUnit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/unit_amount"
				android:textSize="18sp"/>
		</LinearLayout>

		<TextView
			android:id="@+id/material_load_nem_heading"
			style="@style/MaterialLoadDialogLabelHeading"
			android:layout_column="0"
			android:layout_marginTop="5dp"
			android:layout_row="4"
			android:text="@string/material_load_nem"/>

		<TextView
			android:id="@+id/material_load_nem"
			style="@style/MaterialLoadDialogLabel"
			android:layout_column="1"
			android:layout_marginTop="5dp"
			android:layout_row="4"/>

		<TextView
			style="@style/MaterialLoadDialogSubLabelHeading"
			android:layout_column="0"
			android:layout_row="5"
			android:text="@string/material_load_multiplier"/>

		<TextView
			android:id="@+id/material_load_multiplier"
			style="@style/MaterialLoadDialogSubLabel"
			android:layout_column="1"
			android:layout_row="5"/>

		<TextView
			style="@style/MaterialLoadDialogLabelHeading"
			android:layout_column="0"
			android:layout_row="6"
			android:text="@string/material_load_value"/>

		<TextView
			android:id="@+id/material_load_value"
			style="@style/MaterialLoadDialogLabel"
			android:layout_column="1"
			android:layout_row="6"/>

		<TextView
			style="@style/MaterialLoadDialogSubLabelHeading"
			android:layout_column="0"
			android:layout_row="7"
			android:text="@string/material_load_total_value"/>

		<TextView
			android:id="@+id/material_load_total_value"
			style="@style/MaterialLoadDialogSubLabel"
			android:layout_column="1"
			android:layout_row="7"/>
	</GridLayout>
</ScrollView>