<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/material_button_bar"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_bar_vertical_margin"
        android:paddingLeft="@dimen/button_bar_horizontal_margin"
        android:paddingRight="@dimen/button_bar_horizontal_margin"
        android:paddingTop="@dimen/button_bar_vertical_margin">

        <Button
            android:id="@+id/material_button_load"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/material_load"/>

        <Button
            android:id="@+id/material_button_remove"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/material_remove"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/material_button_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/material_layout_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/material_layout_labels"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/material_fben_heading"
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/material_fben"/>

                <TextView
                    android:id="@+id/material_fben"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/material_fbet"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <TextView
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_namn"/>

                <TextView
                    android:id="@+id/material_namn"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_unnr"/>

                <TextView
                    android:id="@+id/material_unnr"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_klasskod"/>

                <TextView
                    android:id="@+id/material_klasskod"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/material_frpgrp_heading"
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_frpgrp"/>

                <TextView
                    android:id="@+id/material_frpgrp"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/material_tunnelkod_heading"
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_tunnelkod"/>

                <TextView
                    android:id="@+id/material_tunnelkod"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_tpkat"/>

                <TextView
                    android:id="@+id/material_tpkat"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/material_nem_heading"
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_nem"/>

                <TextView
                    android:id="@+id/material_nem"
                    style="@style/MaterialLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>