<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/dialog_vertical_margin"
		android:paddingLeft="@dimen/dialog_horizontal_margin"
		android:paddingRight="@dimen/dialog_horizontal_margin"
		android:paddingTop="@dimen/dialog_vertical_margin">

		<TextView
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_row="0"
			android:text="@string/document_opt_field_vehicle_reg"/>

		<EditText
			android:id="@+id/document_vehicle_reg"
			android:layout_width="120dp"
			android:layout_column="1"
			android:layout_row="0"
			android:inputType="textNoSuggestions|textCapCharacters"/>

		<TextView
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_row="1"
			android:text="@string/document_opt_field_vehicle_type"/>

		<AutoCompleteTextView
			android:id="@+id/document_vehicle_type"
			android:layout_width="160dp"
			android:layout_column="1"
			android:layout_row="1"
			android:inputType="text"/>

		<TextView
			style="@style/DialogHeading"
			android:layout_column="0"
			android:layout_marginTop="10dp"
			android:layout_row="2"
			android:text="@string/document_opt_field_protected_transport"/>

		<Spinner
			android:id="@+id/document_protected_transport"
			android:layout_width="120dp"
			android:layout_height="match_parent"
			android:layout_column="1"
			android:layout_marginTop="10dp"
			android:layout_row="2"/>
	</GridLayout>
</ScrollView>